# Meli-Challenge-Engineer-Python

./: README.md  pyproject.toml
app/etl/: __init__.py  extract.py  t1_extract.py  t2_transform.py  t3_load.py  t4_pipeline.py  transform.py
app/exploratory_analysis/: analysis.ipynb  documentacao_modelo_dados.md
data/: data.csv
