[tool.poetry]
name = "meli-challenge-engineer-python"
version = "0.1.0"
description = ""
authors = ["Leonardo Vitorino Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
